# Diploma

./: CMakeLists.txt  main.cpp  main1.cpp  premain.cpp
core/: BinaryInteractionDatabase.cpp  BinaryInteractionDatabase.h  Component.h  ComponentDatabase.cpp  ComponentDatabase.h  CompositionUtils.cpp  CompositionUtils.h  ReactorState.cpp  ReactorState.h  ReactorState1.cpp
core/config/: SimulationConfig.h  SimulationConfigLoader.cpp  SimulationConfigLoader.h  SimulationConfigValidator.cpp  SimulationConfigValidator.h
core/dae/: DynamicEnergyReactorDae.cpp  DynamicEnergyReactorDae.h  DynamicEnergyReactorRadau.cpp  DynamicEnergyReactorRadau.h  DynamicStateLayout.h  EnergyReactorDae.cpp  EnergyReactorDae.h  EnergyReactorDae1.cpp  EnergyReactorDae1.h  ReducedReactorDae.cpp  ReducedReactorDae.h
core/input/: DynamicReactorInput.cpp  DynamicReactorInput.h
core/models/: DynamicWellStirredReactorModel.cpp  DynamicWellStirredReactorModel.h  WellStirredReactorModel.cpp  WellStirredReactorModel.h
core/numerics/: NewtonSolver.cpp  NewtonSolver.h
core/properties/: ChemsepComponent.cpp  ChemsepComponent.h  ChemsepEnthalpyBuilder.cpp  ChemsepEnthalpyBuilder.h  ChemsepMaterialBuilder.cpp  ChemsepMaterialBuilder.h  ComponentDatabase.cpp  ComponentDatabase.h  ComponentDatabaseLoader.cpp  ComponentDatabaseLoader.h  ComponentSet.cpp  ComponentSet.h  ComponentSetBuilder.cpp  ComponentSetBuilder.h
core/reactions/: ReactionModel.cpp  ReactionModel.h
core/simulation/: DynamicEnergyReactorSimulation.cpp  DynamicEnergyReactorSimulation.h  EnergyReactorSimulation.cpp  EnergyReactorSimulation.h  ReactorSimulation.cpp  ReactorSimulation.h
core/thermo/: DynamicArticleFlashCalculation.cpp  DynamicArticleFlashCalculation.h  DynamicEnthalpyModel.cpp  DynamicEnthalpyModel.h  DynamicGibbsFlashCalculation.cpp  DynamicGibbsFlashCalculation.h  DynamicGibbsOdeSystem.cpp  DynamicGibbsOdeSystem.h  DynamicPengRobinsonEOS.cpp  DynamicPengRobinsonEOS.h  EnthalpyModel.cpp  EnthalpyModel.h  FlashCalculation.cpp  FlashCalculation.h  GibbsFlashCalculation.cpp  GibbsFlashCalculation.h  GibbsFlashCalculation1.cpp  GibbsFlashCalculation1.h  Material.cpp  Material.h  PengRobinsonEOS.cpp  PengRobinsonEOS.h  ThermoPackage.cpp  ThermoPackage.h
data/: binary_coefficients.csv  chemsep_component_correlations_long.csv  chemsep_components_data_dictionary.csv  chemsep_components_model_ready.csv  chemsep_components_model_ready.txt  reactor_input.json
input/: case_default.json
results/: result_table.csv
